dhall/tests/type-errors/unit/ListLiteralEmptyNotType.txt
Type error: Unhandled error: error: Wrong type of function argument
 --> <current file>:1:5
  |
1 | [] : List Type
  |      ^^^^^^^^^ Wrong type of function argument
  |      ---- help: this expects an argument of type: Type
  |           ---- help: but this has type: Kind
  |
